// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebGLCanvasManagerSnap should render correctly in immersive view feature 1`] = `
<div>
  <editormaincamera />
  <immersiveviewcamera />
  <immersiveview />
  <group
    name="ROOT"
  >
    <entitygroup
      node="childNode"
    />
  </group>
  <effectcomposer>
    <outline
      edgestrength="5"
      selection="[object Object]"
      visibleedgecolor="16777215"
    />
  </effectcomposer>
  <editortransformcontrols />
  <div
    alignment="bottom-right"
    data-mocked="GizmoHelper"
    margin="[72,72]"
  >
    <div
      axiscolors="[\\"#000000\\",\\"#000000\\",\\"#000000\\"]"
      data-mocked="GizmoViewport"
    />
  </div>
  <viewcursor
    position="[object Object]"
  >
    <widgetvisual
      name="Deselected"
      userdata="[object Object]"
    >
      <primitive
        attach="visual"
        object="[object Object]"
      />
    </widgetvisual>
    <widgetvisual
      name="Selected"
      userdata="[object Object]"
    >
      <primitive
        attach="visual"
        object="[object Object]"
      />
    </widgetvisual>
  </viewcursor>
  <sceneinfoview />
</div>
`;

exports[`WebGLCanvasManagerSnap should render correctly with immersive view feature 1`] = `
<div>
  <editormaincamera />
  <immersiveviewcamera />
  <immersiveview />
  <group
    name="ROOT"
  >
    <entitygroup
      node="childNode"
    />
  </group>
  <effectcomposer>
    <outline
      edgestrength="5"
      selection="[object Object]"
      visibleedgecolor="16777215"
    />
  </effectcomposer>
  <editortransformcontrols />
  <div
    alignment="bottom-right"
    data-mocked="GizmoHelper"
    margin="[72,72]"
  >
    <div
      axiscolors="[\\"#000000\\",\\"#000000\\",\\"#000000\\"]"
      data-mocked="GizmoViewport"
    />
  </div>
  <gridhelper
    args="1000,500,[object Object],[object Object]"
  />
  <mesh
    name="Ground"
    rotation="4.71238898038469,0,0"
  >
    <planegeometry
      args="1000,1000"
    />
    <meshbasicmaterial />
  </mesh>
  <sceneinfoview />
</div>
`;

exports[`WebGLCanvasManagerSnap should render editing correctly without immersive view feature 1`] = `
<div>
  <editormaincamera />
  <immersiveview />
  <group
    name="ROOT"
  >
    <entitygroup
      node="childNode"
    />
  </group>
  <effectcomposer>
    <outline
      edgestrength="5"
      selection="[object Object]"
      visibleedgecolor="16777215"
    />
  </effectcomposer>
  <editortransformcontrols />
  <div
    alignment="bottom-right"
    data-mocked="GizmoHelper"
    margin="[72,72]"
  >
    <div
      axiscolors="[\\"#000000\\",\\"#000000\\",\\"#000000\\"]"
      data-mocked="GizmoViewport"
    />
  </div>
  <gridhelper
    args="1000,500,[object Object],[object Object]"
  />
  <mesh
    name="Ground"
    rotation="4.71238898038469,0,0"
  >
    <planegeometry
      args="1000,1000"
    />
    <meshbasicmaterial />
  </mesh>
  <sceneinfoview />
</div>
`;

exports[`WebGLCanvasManagerSnap should render viewing correctly without immersive view feature 1`] = `
<div>
  <editormaincamera />
  <immersiveview />
  <group
    name="ROOT"
  >
    <entitygroup
      node="childNode"
    />
  </group>
  <effectcomposer>
    <outline
      edgestrength="5"
      selection="[object Object]"
      visibleedgecolor="16777215"
    />
  </effectcomposer>
</div>
`;
